objects/Deal_Grading__c.object
<CustomObject>
    <description>Deal Grading related to Opportunities</description>
    <fields>
        <fullName>Account1__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Deal Grading</relationshipLabel>
        <relationshipName>Deal_Grading</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Additional_Comments__c</fullName>
        <label>Additional Comments ?</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Application_Usage__c</fullName>
        <label>Application Usage</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Approval_Steps__c</fullName>
        <label>Approval Steps</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Product Line Approved</fullName>
                </value>
                <value>
                    <fullName>Admin Approval</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Approximate_Chip_Size__c</fullName>
        <label>Approximate Chip Size(Dimension)</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Approximate_Die_Size__c</fullName>
        <label>Approximate Die Size ?</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Brand_Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>PLM Contact</label>
        <referenceTo>User</referenceTo>
        <relationshipName>User2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Brand__c</fullName>
        <label>Brand</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>CUSTOM LOGIC</fullName>
                </value>
                <value>
                    <fullName>CUSTOM PROCESSORS</fullName>
                </value>
                <value>
                    <fullName>SERVICES</fullName>
                </value>
                <value>
                    <fullName>SPECIALTY FOUNDRY</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Business_Assessment_Done__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Business Approval Done</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Business_Assessment_Done_by__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Business Approval Done by</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Deal_Grading</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Business_Assessor_Comments__c</fullName>
        <label>Business Approval Comments</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Business Assessment Approved</fullName>
                </value>
                <value>
                    <fullName>Business Assessment Rejected</fullName>
                </value>
                <value>
                    <fullName>Need more information</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Business_Assessor_Email__c</fullName>
        <inlineHelpText>Email address of the business assessor.</inlineHelpText>
        <label>Business Approver&apos;s Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Business_Unit__c</fullName>
        <description>BU from Opportunity</description>
        <formula>TEXT(Opportunity1__r.Business_Unit__c)</formula>
        <inlineHelpText>Identify the business unit for the specific oppty.</inlineHelpText>
        <label>Business Unit</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Can_this_Opp_be_linked_to__c</fullName>
        <label>Is this a Mosis MPW candidate?</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Client_Market_share_in__c</fullName>
        <label>&gt; Account&apos;s Market share (in %)</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Client__c</fullName>
        <formula>Opportunity1__r.AccountId</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Account</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Deal_Grading_Approval__c</fullName>
        <label>Deal Grading Approval Comment</label>
        <length>2000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Deal_Grading_Help__c</fullName>
        <label>Deal Grading Help</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Deal_Grading_Name__c</fullName>
        <formula>Opportunity1__r.Name  &amp; &apos;-&apos;&amp; Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Deal Grading Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Deal_Grading_status__c</fullName>
        <label>Deal Grading status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Draft</fullName>
                    <default>true</default>
                    <label>Draft</label>
                </value>
                <value>
                    <fullName>Pending Resubmission</fullName>
                </value>
                <value>
                    <fullName>Deal Grading Review</fullName>
                </value>
                <value>
                    <fullName>Complete - Proceed to Quote</fullName>
                </value>
                <value>
                    <fullName>Complete - Review Not Required</fullName>
                </value>
                <value>
                    <fullName>Complete - No Bid</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <label>Description</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Design_Services_required__c</fullName>
        <inlineHelpText>Are Design service required outside the standard model ?</inlineHelpText>
        <label>Design Services required</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Design_Services_requirement__c</fullName>
        <label>Design Services Requirement</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Design_System__c</fullName>
        <label>Design System</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>End_Time__c</fullName>
        <label>End Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Estimated_Client_Floorplan_Date__c</fullName>
        <inlineHelpText>Estimated client Floorplan NetList Date</inlineHelpText>
        <label>Estimated Account Floorplan NetList Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Estimated_NRE__c</fullName>
        <label>&gt; Estimated NRE, $M</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Estimated__c</fullName>
        <label>Estimated LTR, &amp;M</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Estimated_max_Price__c</fullName>
        <label>Estimated max Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Estimated_min_Price__c</fullName>
        <label>Estimated min Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Estimated_target_date__c</fullName>
        <label>&gt; Estimated Target RTC Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Exclude_from_metrics__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Exclude from metrics</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Existing_Client__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Existing Account</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Existing_track_record__c</fullName>
        <label>Established track record in application</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Expected_Client_Response_Level__c</fullName>
        <label>&gt; Expected Account Response Level</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>RFQ</fullName>
                </value>
                <value>
                    <fullName>RFI</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Expected_Client_date__c</fullName>
        <label>&gt; Expected Account Response Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Expected_Gross_Margins__c</fullName>
        <label>&gt; Expected Gross Margins</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Aggressive (0-20% GM)</fullName>
                </value>
                <value>
                    <fullName>Moderate (&gt;20% GM)</fullName>
                </value>
                <value>
                    <fullName>Negative (&lt;0% GM)</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Explanantion__c</fullName>
        <label>&gt; Explanation of exact Requirement</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FAE_Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>FAE Contact</label>
        <referenceTo>User</referenceTo>
        <relationshipName>User1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>GF_Part_Number__c</fullName>
        <label>GF Part Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GF_part_Name__c</fullName>
        <label>&gt; GF Part Name</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Grade__c</fullName>
        <label>Grade</label>
        <length>5</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Graded_Date__c</fullName>
        <label>Graded Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>IBM_part_name__c</fullName>
        <label>GF Part Name</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IP_FAR_Requests__c</fullName>
        <label>IP FAR Requests</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IP__c</fullName>
        <inlineHelpText>Type of IP&apos;s which GF is offering</inlineHelpText>
        <label>IP</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Menu</fullName>
                </value>
                <value>
                    <fullName>New</fullName>
                </value>
                <value>
                    <fullName>3rd Party</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>If_Yes_specify_exact_requirement__c</fullName>
        <inlineHelpText>Client must include the GF crackstop in the chip layout, for technologies enabled with this capability ?</inlineHelpText>
        <label>If Yes, specify exact requirement</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>If_yes__c</fullName>
        <inlineHelpText>If yes, how many previous shuttles may have been utilized that enabled this particular design win ?</inlineHelpText>
        <label>If yes, # of shuttles utilized</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Incumbent_Supplier_Data__c</fullName>
        <label>Incumbent Supplier Data</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Incumbent__c</fullName>
        <label>Incumbent Supplier</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Incumbent_supplier__c</fullName>
        <label>Incumbent supplier for this socket</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Is_submitting_for_approval__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is submitting for approval</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Is_this_Speciality_Foundry_Plus__c</fullName>
        <label>Is this Specialty Foundry Plus ?</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Is_this_an_existing_client__c</fullName>
        <label>Is this an existing Account ?</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>LTR_Estimated__c</fullName>
        <label>&gt; LTR Estimated</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>LTR_Rev__c</fullName>
        <formula>Opportunity1__r.LTR_Rev_M__c</formula>
        <label>LTR Rev ($M)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Laser_wavelength__c</fullName>
        <label>&gt; What is the Laser wavelength ?</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>List__c</fullName>
        <label>List IP/FAR Requests(for Non Menu)</label>
        <length>2000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>MD_Partname__c</fullName>
        <inlineHelpText>This is the same as GF Part name</inlineHelpText>
        <label>GF_Part_Name</label>
        <length>90</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MD_Resource__c</fullName>
        <label>MD Resource</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Maximum_Frequency_Required__c</fullName>
        <label>Maximum Frequency Required, MHz:</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Meeting_Date__c</fullName>
        <inlineHelpText>Set the data the oppty is planned to be reviewed on in a deal grade review meeting.</inlineHelpText>
        <label>Meeting Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Meeting_ID__c</fullName>
        <label>Meeting ID</label>
        <type>AutoNumber</type>
    </fields>
    <fields>
        <fullName>Meeting_Link__c</fullName>
        <label>Meeting Link</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Meeting_Required1__c</fullName>
        <label>Meeting Required</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Meeting_Required__c</fullName>
        <inlineHelpText>Does this Deal Grading required meeting ?</inlineHelpText>
        <label>Meeting Required.</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                    <default>true</default>
                    <label>Yes</label>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Meeting_Status__c</fullName>
        <label>Meeting Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Completed</fullName>
                </value>
                <value>
                    <fullName>Expired</fullName>
                </value>
                <value>
                    <fullName>Pending</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Meeting_Type__c</fullName>
        <label>Meeting Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Normal</fullName>
                </value>
                <value>
                    <fullName>Urgent</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>New_Required_IP__c</fullName>
        <defaultValue>false</defaultValue>
        <label>New Required IP</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>New_or_Third_Party_IP__c</fullName>
        <label>New or Third Party IP</label>
        <length>2000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Non_MD_Resource__c</fullName>
        <label>Non MD Resource</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Non_Menu_IP__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Non Menu IP</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Non_Plan_IP__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Non Plan IP</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>NotBlank_Uni_Req_Module_Component_IP_Req__c</fullName>
        <defaultValue>false</defaultValue>
        <label>NotBlank Uni Req/Module Component/IP Req</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Note__c</fullName>
        <defaultValue>&quot;Estimated Volumes and ASPs by year must be entered in appropriate section in SFDC&quot;</defaultValue>
        <label>Note:</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Notify_Business_Assessor__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Notify Business Approver</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Opp_require__c</fullName>
        <inlineHelpText>Does this Opportunity require a technology addition or modification ?</inlineHelpText>
        <label>Addition/Modification Required ?</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Opportunity1__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>&gt; Opportunity</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>Deal Grading (Opportunity)</relationshipLabel>
        <relationshipName>Deal_Grading9</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Packaging_or__c</fullName>
        <inlineHelpText>Does it require Test, Packaging or other unique support ?</inlineHelpText>
        <label>Test/Packaging/Unique support reqired ?</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Previous_Shuttles_Data__c</fullName>
        <label>Previous Shuttles Data</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Previous_Shuttles__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Previous Shuttles</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Prior_IBM_Part_Name__c</fullName>
        <label>Prior GF Part Name</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Prior_IBM_Part_number__c</fullName>
        <label>Prior IBM Part number</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Product_Line__c</fullName>
        <description>Product Line from Opportunity</description>
        <formula>TEXT( Opportunity1__r.Product_Line__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Product Line is the unit which has the profit and loss for the oppty.</inlineHelpText>
        <label>Product Line</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Quote_Position__c</fullName>
        <label>Quote Position</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Ready_for_Approval_Submission__c</fullName>
        <formula>OR
( 
IF
(
   AND
   (
     RecordType.DeveloperName = &apos;SiPh&apos;,
     TEXT(Expected_Client_Response_Level__c) &lt;&gt; &apos;&apos;,
     TEXT(Expected_Client_date__c) &lt;&gt; &apos;&apos;,
     What_is_the_Laser_source__c &lt;&gt; &apos;&apos;,
     Laser_wavelength__c &lt;&gt; &apos;&apos;,
     TEXT(What_is_GF_shipping_a_module_or_a_wafe__c) &lt;&gt; &apos;&apos;,
     What_is_the_modulation_scheme__c &lt;&gt; &apos;&apos;,
     OR(
		AND(
			NOT(ISPICKVAL(What_is_GF_shipping_a_module_or_a_wafe__c, &apos;Wafer&apos;)), 
			TEXT(What_is_the_form_factor_for_the_module__c) &lt;&gt; &apos;&apos;
		),
		ISPICKVAL(What_is_GF_shipping_a_module_or_a_wafe__c, &apos;Wafer&apos;)
	 ),
     What_is_the_MSA__c &lt;&gt; &apos;&apos;,
     What_is_the_fiber_attach_method__c &lt;&gt; &apos;&apos;,
     What_is_the_SiPh_app_for_this_design__c &lt;&gt; &apos;&apos;,
     What_is_the_system_topology__c &lt;&gt; &apos;&apos;,
     What_is_the_SpPh_Data_Rate__c &lt;&gt; &apos;&apos;,
     NotBlank_Uni_Req_Module_Component_IP_Req__c = true,
     Unique_Process_Requirements__c &lt;&gt; &apos;&apos;,
     TEXT(Client_Market_share_in__c) &lt;&gt; &apos;&apos;
    ) 
   ,true, false
),
IF
(
   AND
   (
     RecordType.DeveloperName = &apos;ASIC&apos;,
     TEXT(Expected_Client_Response_Level__c) &lt;&gt; &apos;&apos;,
     TEXT(Expected_Client_date__c) &lt;&gt; &apos;&apos;,
     Explanantion__c &lt;&gt; &apos;&apos;,
     TEXT(Startup__c) &lt;&gt; &apos;&apos;,
     TEXT(Client_Market_share_in__c) &lt;&gt; &apos;&apos;,
     TEXT(Estimated_target_date__c) &lt;&gt; &apos;&apos;,
     TEXT(Target_Unit_Price_USD__c) &lt;&gt; &apos;&apos;,
     TEXT(Expected_Gross_Margins__c) &lt;&gt; &apos;&apos;
    ) 
   ,true, false
)
)</formula>
        <inlineHelpText>Expected Client Response Level and Date
Account Response Level and Date
Explanation
Startup
Account Market Share
Estimated Target Date
Estimated NRE
Target Unit Price
Expected Gross Margins
Unique Process Req
System Topology
Laser Source
MSA</inlineHelpText>
        <label>Ready for Approval Submission</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Result__c</fullName>
        <label>Result</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Proceed to Bid</fullName>
                </value>
                <value>
                    <fullName>No Bid - Business Rejected</fullName>
                </value>
                <value>
                    <fullName>Decision Pending</fullName>
                </value>
                <value>
                    <fullName>Complete</fullName>
                </value>
                <value>
                    <fullName>Proceed to Sizing / Review with Brand Prior to Release</fullName>
                </value>
                <value>
                    <fullName>PTQ  In Menu - Proceed to Quote with In Menu IP Only</fullName>
                </value>
                <value>
                    <fullName>PTQ - Proceed to Quote with full requested client support </fullName>
                </value>
                <value>
                    <fullName>PTS SQT (Proceed to Sizing - SQT Only)</fullName>
                </value>
                <value>
                    <fullName>Deal Grading Not Required</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Review_Date__c</fullName>
        <label>Review Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Sales_Contact_FSE__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Sales Contact (FSE)</label>
        <referenceTo>User</referenceTo>
        <relationshipName>User</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Start_time__c</fullName>
        <label>Start time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Startup__c</fullName>
        <label>&gt; Startup?</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Support_Data_1__c</fullName>
        <label>Support Data</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Support_Data_2__c</fullName>
        <label>Support Data</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Support_Data_3__c</fullName>
        <label>Mktg Share</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Target_NRE_Price__c</fullName>
        <label>Target NRE Price ($)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Target_Process_Node__c</fullName>
        <description>Target Process Node from Opportunity</description>
        <formula>TEXT(Opportunity1__r.Target_Process_Node__c)</formula>
        <label>Target Process Node</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Target_Process_Technology__c</fullName>
        <formula>Opportunity1__r.Target_Process_Technology__c</formula>
        <label>Target Process Technology</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Target_Record__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Target Record</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Target_Unit_Price_USD__c</fullName>
        <description>Target Unit Price in USD</description>
        <label>&gt; Target Unit Price ($)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Technology__c</fullName>
        <label>Technology</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Total_Revenue__c</fullName>
        <formula>Opportunity1__r.Total_Lifetime_Revenue__c</formula>
        <label>Total Revenue</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Track_Record_Flag_Data__c</fullName>
        <label>Track Record Flag Data</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Track_Record__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Track Record</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>UniqRequirement_Module_Component_IP_Req__c</fullName>
        <inlineHelpText>Describe any unique design requirements or module component or IP requirements</inlineHelpText>
        <label>&gt;Uni Req/Module Component/IP Req?</label>
        <length>2000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Unique_Process_Requirements__c</fullName>
        <label>&gt;Describe any unique process requirement</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Unique_Support_Data__c</fullName>
        <label>Unique Support Data</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Unique_Support__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Unique Support</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Unique_req_vs_standard_wafer_or_module__c</fullName>
        <inlineHelpText>Are there unique requirements vs our standard wafer or module offerings?</inlineHelpText>
        <label>Unique req vs standard wafer or module ?</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
                <value>
                    <fullName>Unknown</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Volume__c</fullName>
        <formula>Opportunity1__r.Vol_K__c</formula>
        <label>Volume(K)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>What_is_GF_shipping_a_module_or_a_wafe__c</fullName>
        <label>&gt;What is GF shipping a module or wafer?</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Module</fullName>
                </value>
                <value>
                    <fullName>Wafer</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>What_is_customer_s_positioning_in_the__c</fullName>
        <label>Account&apos;s Market Positioning</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>What_is_the_Laser_source__c</fullName>
        <inlineHelpText>e.g.  Laser attach, Fiber</inlineHelpText>
        <label>&gt; What is the Laser source ?</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>What_is_the_MSA__c</fullName>
        <inlineHelpText>e.g. PSM4, CWDM, DWDM</inlineHelpText>
        <label>&gt; What is the Multi Source Agreement ?</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>What_is_the_SiPh_app_for_this_design__c</fullName>
        <label>&gt; What is the SiPh app for this design ?</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>What_is_the_SpPh_Data_Rate__c</fullName>
        <inlineHelpText>e.g. to 25GB/s</inlineHelpText>
        <label>&gt; What is the SiPh Data Rate ?</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>What_is_the_fiber_attach_method__c</fullName>
        <inlineHelpText>For instance will they be using our IOSMF V-groove scheme</inlineHelpText>
        <label>&gt; What is the fiber attach method ?</label>
        <length>255</length>
        <type>Text</type>
    </fields>
</CustomObject>